@@ -6,9 +6,19 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
     id("kotlin-kapt")
 }
-
+kotlin {
+    jvmToolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
 kapt {
     correctErrorTypes = true
+    javacOptions {
+        // Pass the export flag so that jdk.compiler exports com.sun.tools.javac.main to the unnamed module.
+        option("-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+
+    }
+
 }
 
 android {
@@ -61,8 +71,18 @@ dependencies {
     implementation(libs.androidx.navigation.fragment.ktx)
     implementation(libs.androidx.navigation.ui.ktx)
     implementation(libs.androidx.runtime.android)
-    implementation(libs.androidx.room.common.jvm)
-    implementation(libs.androidx.room.runtime.android)
+    val room_version = "2.6.1"
+
+        implementation("androidx.room:room-runtime:$room_version")
+        kapt("androidx.room:room-compiler:$room_version")
+    // optional - Kotlin Extensions and Coroutines support for Room
+        implementation("androidx.room:room-ktx:$room_version")
+
+        // optional - Test helpers
+        testImplementation("androidx.room:room-testing:$room_version")
+
+        // optional - Paging 3 Integration
+        implementation("androidx.room:room-paging:$room_version")
     implementation(libs.androidx.runtime.livedata)
     testImplementation(libs.junit)
     androidTestImplementation(libs.androidx.junit)
